--- a/clientes.html
+++ b/clientes.html
@@ -11,23 +11,19 @@
     <input type="date" id="fecha" required>
     <button type="submit">Guardar</button>
   </form>
-  <!-- muestra ventas cerradas -->
-  <div style="display:flex; gap:40px;">
-  <div>
-    <h2>Lista de Clientes</h2>
-    <ul id="listaClientes"></ul>
+
+  <div style="display:flex; gap:40px; margin-top:20px;">
+    <div>
+      <h2>Lista de Clientes</h2>
+      <ul id="listaClientes"></ul>
+    </div>
+    <div>
+      <h2>Lista de Ventas Cerradas</h2>
+      <ul id="listaVentasCerradas"></ul>
+    </div>
   </div>
-  <div>
-    <h2>Lista de Ventas Cerradas</h2>
-    <ul id="listaVentasCerradas"></ul>
-  </div>
-</div>
-  <!-- muestra ventas cerradas -->
 
   <!-- Script de Firebase -->
   <script type="module" src="firebase.js"></script>
-  <!-- Script de Firebase -->
-  
-
 </body>
 </html>
