--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <a href="#contacto">Contacto</a>
   <a href="#cuidado-personal">Cuidado personal</a>
   <a href="#perfumeria">Perfumeria y esencias</a>
-  <a href="clientes.html">Registro de Clientes</a>
+  <a href="menu.html">Registro de Clientes</a>
 </nav>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
