--- a/clientes.html
+++ b/clientes.html
@@ -10,6 +10,8 @@
     <input type="text" id="nombre" placeholder="Nombre" required>
     <input type="date" id="fecha" required>
     <button type="submit">Guardar</button>
+        <button onclick="location.href='index.html'">Volver al Menú Principal</button>
+
     <input type="text" id="buscador" placeholder="Buscar cliente por nombre, ID o palabra clave">
   </form>
 
