--- a/stock.html
+++ b/stock.html
@@ -7,6 +7,8 @@
 <body>
   <h2>Control de Stock</h2>
   <button onclick="document.getElementById('archivoExcel').click()">Subir Excel</button>
+      <button onclick="location.href='index.html'">Volver al Menú Principal</button>
+
   <input type="file" id="archivoExcel" style="display:none" accept=".csv,.xlsx">
 
   <h3>Listado General</h3>
