--- a/clientes.html
+++ b/clientes.html
@@ -10,7 +10,7 @@
     <input type="text" id="nombre" placeholder="Nombre" required>
     <input type="date" id="fecha" required>
     <button type="submit">Guardar</button>
-        <button onclick="location.href='index.html'">Volver al Menú Principal</button>
+        <button onclick="location.href='menu.html'">Volver al Menú Principal</button>
 
     <input type="text" id="buscador" placeholder="Buscar cliente por nombre, ID o palabra clave">
   </form>
