--- a/stock.html
+++ b/stock.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Control de Stock</h2>
   <button onclick="document.getElementById('archivoExcel').click()">Subir Excel</button>
-      <button onclick="location.href='index.html'">Volver al Menú Principal</button>
+      <button onclick="location.href='menu.html'">Volver al Menú Principal</button>
 
   <input type="file" id="archivoExcel" style="display:none" accept=".csv,.xlsx">
 
