--- a/clientes.html
+++ b/clientes.html
@@ -62,5 +62,43 @@
     });
   });
 </script>
+<!-- Script de Firebase -->
+<script type="module">
+  import { getDocs, collection, deleteDoc, doc } from "firebase/firestore";
+  import { db } from "./firebase.js";
+
+  // Cargar clientes
+  async function cargarClientes() {
+    const querySnapshot = await getDocs(collection(db, "clientes"));
+    querySnapshot.forEach(docSnap => {
+      const cliente = docSnap.data();
+
+      const li = document.createElement("li");
+      li.textContent = `${cliente.etiqueta} - ${cliente.nombre}`;
+
+      // Botón de eliminar automático
+      const btnEliminar = document.createElement("button");
+      btnEliminar.textContent = "Eliminar";
+      btnEliminar.onclick = () => eliminarCliente(docSnap.id);
+
+      li.appendChild(btnEliminar);
+      document.getElementById("listaClientes").appendChild(li);
+    });
+  }
+
+  cargarClientes();
+
+  // Función de eliminar con contraseña
+  function eliminarCliente(idCliente) {
+    const clave = prompt("Ingrese la contraseña para eliminar:");
+    if (clave === "admin123") {
+      deleteDoc(doc(db, "clientes", idCliente))
+        .then(() => alert("Cliente eliminado correctamente"))
+        .catch(err => console.error("Error al eliminar:", err));
+    } else {
+      alert("Contraseña incorrecta. No se eliminó nada.");
+    }
+  }
+</script>
 </body>
 </html>
