--- a/stock.html
+++ b/stock.html
@@ -26,7 +26,7 @@
   <!-- Script principal -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-    import { getFirestore, doc, setDoc } 
+    import { getFirestore, doc, setDoc, getDocs, collection } 
       from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -41,9 +41,25 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const input = document.getElementById("archivoExcel");
+    // Al cargar la página, leer productos desde Firebase
+    document.addEventListener("DOMContentLoaded", async () => {
+      const productosSnap = await getDocs(collection(db, "productos"));
+      productosSnap.forEach((docSnap) => {
+        const prod = docSnap.data();
 
+        const li = document.createElement("li");
+        li.textContent = `${prod.nombre} (${prod.color || ""}) - Stock: ${prod.stock} - Precio: $${prod.precio} - Fecha: ${prod.fecha}`;
+        document.getElementById("listaStock").appendChild(li);
+
+        if (Number(prod.stock) === 0) {
+          document.getElementById("listaAgotados").appendChild(li.cloneNode(true));
+        } else if (Number(prod.stock) <= 2) {
+          document.getElementById("listaPorAgotarse").appendChild(li.cloneNode(true));
+        }
+      });
+
+      // Activar carga de CSV
+      const input = document.getElementById("archivoExcel");
       input.addEventListener("change", function(e) {
         const file = e.target.files[0];
         Papa.parse(file, {
