--- a/stock.html
+++ b/stock.html
@@ -80,6 +80,7 @@
                     .toLowerCase();
 
           await setDoc(doc(db, "productos", id), {
+            id: id, // 👈 agregar esto
             nombre: prod.nombre,
             color: prod.color,
             precio: Number(prod.precio),
